--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
         .sequencia_cards{
             display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             gap: 10px;
+            padding: 5%;
         }
 
         .imoveis_comprar{
@@ -59,6 +62,7 @@
 
         .vantagens .conteudo{
             display: flex;
+            flex-wrap: wrap;
             gap: 100px;
             justify-content: center;
             align-items: center;
@@ -68,7 +72,7 @@
             background: var(--primario);
             color: var(--claro);
             display: grid;
-            grid-template-columns: 700px 700px;
+            grid-template-columns: 45% 45%;
             grid-template-rows: 100px auto;
             justify-content: center;
             align-items: center;
@@ -85,6 +89,23 @@
 
         .mapa{
             grid-column: 1 / 3;
+        }
+
+        @media (max-width: 1200px) {
+            .camada1{
+                grid-template-columns: 90%;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .camada1 .vazio{
+                grid: 0;
+            }
+            .camada1 .janela_vertical{
+                grid-column: 1 / 3;
+                ali
+            }
+
         }
     </style>
 </head>
@@ -150,7 +171,7 @@
         <section class="imoveis_comprar">
             <h2 class="titulo_secao">Imóveis para Comprar</h2>
             
-            <div class="sequencia_cards ">
+            <div class="sequencia_cards">
                     <div class="card_imovel borde_sombra_azul">
                     <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
                     <h3>Título imóvel</h3>
@@ -221,5 +242,26 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.055351762229!2d-51.22919842355745!3d-30.03526983085264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95197906a9d397f5%3A0x514b4935e97fbf4d!2sUniSenac%20-%20Campus%20Porto%20Alegre%20I!5e0!3m2!1spt-BR!2sbr!4v1751462719047!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
         </section>
     </main>
+    <footer class="rodape">
+        <d
+        iv class="logo_rodape">
+            <img src="img/logotipo_imobi_black.png" alt="logotipo">
+            <p>Cada chave, um novo começo.</p>
+        </div>
+        <div class="contate_nos">
+            <h2>Contate-nos</h2>
+            <p class="subtitulo_footer">Agende uma visita conosco</p>
+            <p>imobi@email.com</p>
+            <p>+55 (51) 99999-9999</p>
+        </div>
+        <div class="siga_nos">
+            <h2>Siga-nos</h2>
+            <p class="subtitulo_footer">Nos acompanhe nas redes sociais</p>
+            <a href="#"><img src="img/icones/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="img/icones/instagram.png" alt="instagram"></a>
+            <a href="#"><img src="img/icones/x.png" alt="X"></a>
+        </div>
+        <div class="direitos_footer">Imobi Inc © Todos os direitos reservados</div>
+    </footer>
 </body>
 </html>
