--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             position: absolute;
             z-index: 2;
             top: 420px;
-            left: 50%;
-            right: 50%;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
             display: grid;
             grid-template-columns: 700px 300px;
             justify-content: center;
@@ -94,18 +95,21 @@
         @media (max-width: 1200px) {
             .camada1{
                 grid-template-columns: 90%;
-                justify-content: center;
-                align-items: center;
             }
 
-            .camada1 .vazio{
+            .camada2{
+                grid-template-columns: 100%;
+                margin: 0 50px;
+                text-align: center;
+            }
+
+            .vazio{
                 grid: 0;
             }
             .camada1 .janela_vertical{
                 grid-column: 1 / 3;
-                ali
+                justify-self: center;
             }
-
         }
     </style>
 </head>
@@ -243,8 +247,7 @@
         </section>
     </main>
     <footer class="rodape">
-        <d
-        iv class="logo_rodape">
+        <div class="logo_rodape">
             <img src="img/logotipo_imobi_black.png" alt="logotipo">
             <p>Cada chave, um novo começo.</p>
         </div>
