--- a/imoveis.html
+++ b/imoveis.html
@@ -39,63 +39,63 @@
             <div class="catalogo_imoveis">
                 <div class="card_imovel">
                     <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <h3>Casa Clássica</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 4.200/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel6.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Condomínio com Piscina</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.300.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Moderno e funcional, este prédio conta com piscina no térreo, área de lazer completa e apartamentos bem distribuídos para viver com estilo.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
+                    <img src="img/imovel1.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa simples</h3>
                     <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Decoração clean e ambientes integrados. Essa casa traz conforto, modernidade e um toque de sofisticação em cada detalhe</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel8.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa com Piscina</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.400.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Espaço, lazer e conforto! Casa com piscina privativa, área gourmet e ambientes planejados para aproveitar cada momento ao lado da família.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel7.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 4.800/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Interior espaçoso e bem planejado, com ambientes integrados e acabamentos modernos. Ideal para quem valoriza conforto e sofisticação.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel3.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Condomínio</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.250.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Condomínio seguro e bem localizado, com estrutura completa para quem deseja morar com tranquilidade, lazer e qualidade de vida.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel9.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Condomínios</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ R$ 5.000/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Condomínio fechado com segurança 24h, área de lazer e localização estratégica. Perfeito para famílias que buscam conforto e praticidade.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel4.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.050.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Com excelente iluminação natural e acabamentos sofisticados, esse espaço interno valoriza cada momento vivido com conforto.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel2.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa de Campo</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 3.500/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Cercada pela natureza, essa charmosa casa de campo proporciona tranquilidade, ar puro e uma vista encantadora — ideal para viver com paz e conforto.</p>
                 </div>
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel5.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa em Bairro Tranquilo</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 900.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Localizada em uma região calma e valorizada, essa casa é ideal para famílias que desejam comodidade com segurança e fácil acesso a comércios.</p>
                 </div>
             </div>
         </section>
