--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             </div>
             <div class="camada2">
                 <div class="banner__texto">
-                    <h1 class="banner__texto__titulo_chamativo">Texto chamativo que <span class="destaque_cor">introduz</span> e chama atenção!</h1>
-                    <p class="banner__texto__paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta veritatis itaque magnam libero, similique optio doloremque eligendi quas! Eveniet aliquam nobis reprehenderit praesentium odio delectus quibusdam quo quas est!</p>
+                    <h1 class="banner__texto__titulo_chamativo">O imóvel ideal <span class="destaque_cor">espera por você</span> aqui!</h1>
+                    <p class="banner__texto__paragrafo">Encontre casas, apartamentos e espaços comerciais perfeitos para comprar ou alugar. Com transparência, agilidade e as melhores condições do mercado, sua nova jornada começa com a gente!</p>
                 </div>
                 <div class="vazio"></div>
             </div>
@@ -145,30 +145,30 @@
             <div class="sequencia_cards">
                 <div class="card_imovel">
                     <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <h3>Casa Clássica</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 4.200/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
                 </div>
 
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis, obcaecati, doloremque vitae quibusdam laborum magnam!</p>
+                    <img src="img/imovel2.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa de Campo</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ R$ 3.500/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Rodeada pela natureza, essa charmosa casa de campo é ideal para quem busca tranquilidade, ar puro e um refúgio longe da correria da cidade.</p>
                 </div>
                 
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel3.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Condomínio</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 5.000/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Condomínio moderno com segurança 24h, área de lazer completa e excelente localização. Ideal para famílias que prezam por conforto e comodidade.</p>
                 </div>
 
                 <div class="card_imovel">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis, obcaecati, doloremque vitae quibusdam laborum magnam!</p>
+                    <img src="img/imovel4.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 4.800/mês</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Ambientes amplos e bem iluminados, com acabamentos de alto padrão. Essa casa oferece integração perfeita entre sala, cozinha e área social.</p>
                 </div>
             </div>
         </section>
@@ -177,31 +177,31 @@
             
             <div class="sequencia_cards">
                     <div class="card_imovel borde_sombra_azul">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel5.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa em Bairro</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 900.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Localizada em um bairro tranquilo e valorizado, essa casa oferece praticidade no dia a dia, com comércios e escolas próximas.</p>
                 </div>
 
                 <div class="card_imovel borde_sombra_azul">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis, obcaecati, doloremque vitae quibusdam laborum magnam!</p>
+                    <img src="img/imovel7.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa simples</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.050.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Sala de estar espaçosa com toque contemporâneo. Um espaço perfeito para relaxar com a família ou receber visitas com elegância.</p>
                 </div>
 
                 <div class="card_imovel borde_sombra_azul">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
-                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis.</p>
+                    <img src="img/imovel6.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Condomínio com Piscina</h3>
+                    <p class="imoveis_alugar__card_imovel__preco">R$ 1.300.000</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Moderno e funcional, este prédio conta com piscina no térreo, área de lazer completa e apartamentos bem distribuídos para viver com estilo.</p>
                 </div>
 
                 <div class="card_imovel borde_sombra_azul">
-                    <img src="img/imovel.jpg" alt="Casa estilo americana" class="cards_imoveis__imagens">
-                    <h3>Título imóvel</h3>
+                    <img src="img/imovel1.png" alt="Casa estilo americana" class="cards_imoveis__imagens">
+                    <h3>Casa simples</h3>
                     <p class="imoveis_alugar__card_imovel__preco">R$ 1.000.000</p>
-                    <p class="imoveis_alugar__card_imovel__descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi sed aspernatur natus sequi provident, iure velit facilis, obcaecati, doloremque vitae quibusdam laborum magnam!</p>
+                    <p class="imoveis_alugar__card_imovel__descricao">Decoração clean e ambientes integrados. Essa casa traz conforto, modernidade e um toque de sofisticação em cada detalhe.</p>
                 </div>
             </div>
         </section>
