--- a/imoveis/imovel1.html
+++ b/imoveis/imovel1.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
-            <div class="pagina_imovel__formulario">
+            <div class="formulario_de_contato">
                 <h2 class="titulo_secao" style="padding: 50px 0; margin: 20px">Mais informações?</h2>
                 <form action="" method="post" class="formulario_contato">
                     <label for="nome">Nome</label>
