--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
         <a href="contato.html" class="botao_primario_cor2">Contato</a>
     </header>
     <main>
-        <section class="contato">
+        <section class="contato" style="padding-top: 0;">
             <div class="formulario_contato_para_imovel">
                     <div class="formulario_de_contato">
                     <h2 class="titulo_secao" style="padding: 50px 0; margin: 20px">Contate-nos!</h2>
