--- a/imoveis/imovel10.html
+++ b/imoveis/imovel10.html
@@ -26,12 +26,12 @@
             - Rodapé
         -->
         <section class="pagina_imovel">
-            <h1>Casa Clássica</h1>
+            <h1>Casa em Bairro Tranquilo</h1>
             <div class="pagina_imovel__conteudo">
-                <img src="../img/imovel.jpg" alt="">
+                <img src="../img/imovel5.png" alt="">
                 <div class="pagina_imovel__texto">
-                    <p class="preco">R$ R$ 4.200/mês</p>
-                    <p>Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
+                    <p class="preco">R$ 900.000</p>
+                    <p>Localizada em uma região calma e valorizada, essa casa é ideal para famílias que desejam comodidade com segurança e fácil acesso a comércios.</p>
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
