--- a/imoveis/imovel9.html
+++ b/imoveis/imovel9.html
@@ -26,12 +26,12 @@
             - Rodapé
         -->
         <section class="pagina_imovel">
-            <h1>Casa Clássica</h1>
+            <h1>Casa de Campo</h1>
             <div class="pagina_imovel__conteudo">
-                <img src="../img/imovel.jpg" alt="">
+                <img src="../img/imovel2.png" alt="">
                 <div class="pagina_imovel__texto">
-                    <p class="preco">R$ R$ 4.200/mês</p>
-                    <p>Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
+                    <p class="preco">R$ 3.500/mês</p>
+                    <p>Cercada pela natureza, essa charmosa casa de campo proporciona tranquilidade, ar puro e uma vista encantadora — ideal para viver com paz e conforto.</p>
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
