--- a/imoveis/imovel2.html
+++ b/imoveis/imovel2.html
@@ -26,12 +26,12 @@
             - Rodapé
         -->
         <section class="pagina_imovel">
-            <h1>Casa Clássica</h1>
+            <h1>Condomínio com Piscina</h1>
             <div class="pagina_imovel__conteudo">
-                <img src="../img/imovel.jpg" alt="">
+                <img src="../img/imovel6.png" alt="">
                 <div class="pagina_imovel__texto">
-                    <p class="preco">R$ R$ 4.200/mês</p>
-                    <p>Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
+                    <p class="preco">R$ R$ 1.300.000</p>
+                    <p>Moderno e funcional, este prédio conta com piscina no térreo, área de lazer completa e apartamentos bem distribuídos para viver com estilo.</p>
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
