--- a/imoveis/imovel3.html
+++ b/imoveis/imovel3.html
@@ -26,12 +26,12 @@
             - Rodapé
         -->
         <section class="pagina_imovel">
-            <h1>Casa Clássica</h1>
+            <h1>Casa simples</h1>
             <div class="pagina_imovel__conteudo">
-                <img src="../img/imovel.jpg" alt="">
+                <img src="../img/imovel1.png" alt="">
                 <div class="pagina_imovel__texto">
-                    <p class="preco">R$ R$ 4.200/mês</p>
-                    <p>Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
+                    <p class="preco">R$ 1.000.000</p>
+                    <p>Decoração clean e ambientes integrados. Essa casa traz conforto, modernidade e um toque de sofisticação em cada detalhe</p>
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
