--- a/imoveis/imovel4.html
+++ b/imoveis/imovel4.html
@@ -26,12 +26,12 @@
             - Rodapé
         -->
         <section class="pagina_imovel">
-            <h1>Casa Clássica</h1>
+            <h1>Casa com Piscina</h1>
             <div class="pagina_imovel__conteudo">
-                <img src="../img/imovel.jpg" alt="">
+                <img src="../img/imovel8.png" alt="">
                 <div class="pagina_imovel__texto">
-                    <p class="preco">R$ R$ 4.200/mês</p>
-                    <p>Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
+                    <p class="preco">R$ 1.400.000</p>
+                    <p>Espaço, lazer e conforto! Casa com piscina privativa, área gourmet e ambientes planejados para aproveitar cada momento ao lado da família.</p>
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
