--- a/imoveis/imovel5.html
+++ b/imoveis/imovel5.html
@@ -26,12 +26,12 @@
             - Rodapé
         -->
         <section class="pagina_imovel">
-            <h1>Casa Clássica</h1>
+            <h1>Casa</h1>
             <div class="pagina_imovel__conteudo">
-                <img src="../img/imovel.jpg" alt="">
+                <img src="../img/imovel7.png" alt="">
                 <div class="pagina_imovel__texto">
-                    <p class="preco">R$ R$ 4.200/mês</p>
-                    <p>Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
+                    <p class="preco">R$ 4.800/mês</p>
+                    <p>Interior espaçoso e bem planejado, com ambientes integrados e acabamentos modernos. Ideal para quem valoriza conforto e sofisticação.</p>
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
