--- a/imoveis/imovel7.html
+++ b/imoveis/imovel7.html
@@ -26,12 +26,12 @@
             - Rodapé
         -->
         <section class="pagina_imovel">
-            <h1>Casa Clássica</h1>
+            <h1>Condomínios</h1>
             <div class="pagina_imovel__conteudo">
-                <img src="../img/imovel.jpg" alt="">
+                <img src="../img/imovel9.png" alt="">
                 <div class="pagina_imovel__texto">
-                    <p class="preco">R$ R$ 4.200/mês</p>
-                    <p>Com arquitetura tradicional e detalhes elegantes, essa casa clássica oferece conforto, sofisticação e uma atmosfera acolhedora para toda a família.</p>
+                    <p class="preco">R$ 5.000/mês</p>
+                    <p>Condomínio fechado com segurança 24h, área de lazer e localização estratégica. Perfeito para famílias que buscam conforto e praticidade.</p>
                 </div>
             </div>
             <div class="formulario_contato_para_imovel">
