--- a/quem_somos.html
+++ b/quem_somos.html
@@ -99,9 +99,9 @@
             <p>Com uma equipe especializada e atendimento humanizado, buscamos entender o estilo de vida de cada cliente para encontrar o imóvel ideal. Porque, para a IMOBI, cada chave entregue representa muito mais do que uma conquista — é o início de uma nova história.</p>
         </section>
         <section class="galeria">
-            <img src="img/chaves_mao1.png" alt="" class="janela_vertical">
-            <img src="img/chaves_mao1.png" alt="" class="janela_vertical">
-            <img src="img/chaves_mao1.png" alt="" class="janela_vertical">
+            <img src="img/empresa1.png" alt="" class="janela_vertical">
+            <img src="img/empresa2.png" alt="" class="janela_vertical">
+            <img src="img/empresa3.png" alt="" class="janela_vertical">
         </section>
     </main>
     <footer class="rodape">
